--- a/.github/workflows/sphinx-tuttest.yml
+++ b/.github/workflows/sphinx-tuttest.yml
@@ -64,8 +64,8 @@ jobs:
       - name: Install tuttest
         run: |
             sudo locale-gen $LANG
-            wget https://github.com/antmicro/tuttest/releases/download/0.1.1/tuttest -O /usr/bin/tuttest
-            chmod +x /usr/bin/tuttest
+            sudo wget https://github.com/antmicro/tuttest/releases/download/0.1.1/tuttest -O /usr/bin/tuttest
+            sudo chmod a+rx /usr/bin/tuttest
             
 
       - name: Install SymbiFlow toolchain
